--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,8 @@
             "server": "localhost",
             "port": 3306,
             "driver": "MySQL",
-            "name": "BlogPress",
-            "database": "BlogPress",
+            "name": "GameVault",
+            "database": "GameVault",
             "username": "root",
             "password": "06database@SM23"
         }
